core-services/gateway/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: enabled
---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: istio-ingress
#   labels:
#     istio-injection: enabled
